# pdfmerger

./: LICENSE  README.md  pyproject.toml
pdfmerger/: pdfmerger.py
